# 2048GameCpp

./: 2048Game.pro  CMakeLists.txt  GameArea.cpp  GameArea.h  GameAreaEndWidget.cpp  GameAreaEndWidget.h  GameAreaWinWidget.cpp  GameAreaWinWidget.h  Resource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  settings.ini  text.ini
NewYear/: 2024.2048game  2024.ini  2024.py
